web-infras/parser/tests/fixtures/babel/es2018/object-rest-spread/13/output.txt
[SyntaxError]: Identifier has already been declared. (2,31)
2|export const { bar: { baz, ...foo } } = qux;
 |                             ^
[SyntaxError]: Identifier has already been declared. (2,31)
2|export const { bar: { baz, ...foo } } = qux;
 |                             ^
